fix: switched to kyaml

--- a/pkg/cmd/label/test_data/svc/expected.yaml
+++ b/pkg/cmd/label/test_data/svc/expected.yaml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   name: cheese
   labels:
-    beer: stella
     chart: cheese
-    wine: merlot
+    beer: 'stella'
+    wine: 'merlot'
 spec:
   ports:
   - port: 80
