--- a/pkg/cmd/label/test_data/cluster-role-binding/expected.yaml
+++ b/pkg/cmd/label/test_data/cluster-role-binding/expected.yaml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  labels:
-    beer: stella
-    wine: merlot
   name: jx-jx
   namespace: jx
+  labels:
+    beer: 'stella'
+    wine: 'merlot'
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
