fix: lets default extsecret property
to the data key name unless a custom mapping is added

--- a/.jx-gitops/secret-mappings.yaml
+++ b/.jx-gitops/secret-mappings.yaml
@@ -2,6 +2,11 @@ apiVersion: gitops.jenkins-x.io/v1alpha1
 kind: SecretMapping
 spec:
   secrets:
+  - name: lighthouse-hmac-token
+    mappings:
+    - name: hmac
+      key: secret/data/lighthouse/hmac
+      property: token
   - name: lighthouse-oauth-token
     mappings:
     - name: oauth
