fix: lets default the secret path name
to something more canonical

--- a/pkg/cmd/extsecret/test_data/hmac/expected.yaml
+++ b/pkg/cmd/extsecret/test_data/hmac/expected.yaml
@@ -9,8 +9,8 @@ spec:
   vaultRole: vault-infra
   data:
   - name: hmac
-    key: secret/data/lighthouse/hmac
-    property: token
+    key: secret/data/lighthouse/hmac/token
+    property: hmac
   template:
     metadata:
       labels:
