--- a/pkg/cmd/kustomize/test_data/expected/myapp/deployment.yaml
+++ b/pkg/cmd/kustomize/test_data/expected/myapp/deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: myapp-myapp
+  namespace: myapps
   annotations:
     wave.pusher.com/update-on-config-change: "true"
   labels:
