--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
 - name: 'golang:1.13-stretch'
   args: ['make', 'label']
   env:
-  - 'GOPRIVATE=github.com/jenkins-x/helmboot'
+  - 'GOPRIVATE=github.com/jenkins-x/jx-promote'
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-f', 'fns/label/Dockerfile', '-t', 'gcr.io/jenkinsxio-labs-private/jx-fn-label:${_VERSION}', '.' ]
 substitutions:
