fix: add support for values templates in the version stream
so we can add provider specific annotations etc

--- a/pkg/cmd/jx_apps/test_data/input/jx-apps.yml
+++ b/pkg/cmd/jx_apps/test_data/input/jx-apps.yml
@@ -1,6 +1,7 @@
 apps:
   - name: bitnami/external-dns
     namespace: foo
+  - name: jenkins-x/tekton
 #  - name: gsm-controller
 #    phase: apps
 #    repository: https://storage.googleapis.com/jenkinsxio-labs/charts
