fix: copy binaries to bucket

--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -32,9 +32,9 @@ pipelineConfig:
           - name: upload-binaries
             command: make goreleaser
             image: gcr.io/jenkinsxio-labs-private/step-go-releaser:0.0.5
-          #              - name: copy-to-bucket
-          #                command: gsutil cp dist/*.gz dist/*.zip gs://cloudbees-jx-gitops-plugin/plugin/${VERSION}
-          #                image: gcr.io/jenkinsxio-labs-private/jxl
+          - name: copy-to-bucket
+            command: gsutil cp dist/*.gz dist/*.zip gs://cloudbees-jx-plugins/plugin/gitops/${VERSION}
+            image: gcr.io/jenkinsxio-labs-private/jxl
           - command: ./promote.sh
             dir: /workspace/source
             name: promote-release
