--- a/pkg/cmd/extsecret/test_data/simple/.jx/gitops/secret-mappings.yaml
+++ b/pkg/cmd/extsecret/test_data/simple/.jx/gitops/secret-mappings.yaml
@@ -3,7 +3,11 @@ kind: SecretMapping
 spec:
   secrets:
   - name: lighthouse-oauth-token
+    backendType: vault
     mappings:
     - name: oauth
       key: secret/data/jx/pipelineUser
       property: token
+  default:
+    backendType: vault
+
