fix: lets use a default back end type

--- a/pkg/cmd/extsecret/test_data/simple/.jx/gitops/secret-mappings.yaml
+++ b/pkg/cmd/extsecret/test_data/simple/.jx/gitops/secret-mappings.yaml
@@ -8,6 +8,5 @@ spec:
     - name: oauth
       key: secret/data/jx/pipelineUser
       property: token
-  default:
-    backendType: vault
+  defaultBackendType: vault
 
