--- a/pkg/cmd/jx_apps/test_data/input/.jx/gitops/secret-mappings.yaml
+++ b/pkg/cmd/jx_apps/test_data/input/.jx/gitops/secret-mappings.yaml
@@ -15,5 +15,4 @@ spec:
         key: secret/data/jx/pipelineUser
         property: token
 
-  default:
-    backendType: vault
+  defaultBackendType: vault
