feat: validate secret mapping files fixes #15

--- a/pkg/secretmapping/test_data/.jx/gitops/secret-mappings.yaml
+++ b/pkg/secretmapping/test_data/.jx/gitops/secret-mappings.yaml
@@ -1,6 +1,7 @@
 apiVersion: gitops.jenkins-x.io/v1alpha1
 kind: SecretMapping
 spec:
+  defaultBackendType: vault
   secrets:
   - name: lighthouse-hmac-token
     mappings:
