feat: support google secrets manager in secrets mapping

--- a/pkg/cmd/extsecret/test_data/backend_types/.jx/gitops/secret-mappings.yaml
+++ b/pkg/cmd/extsecret/test_data/backend_types/.jx/gitops/secret-mappings.yaml
@@ -8,11 +8,13 @@ spec:
     - name: oauth
       key: secret/data/jx/pipelineUser
       property: token
-  - name: lighthouse-oauth-token2
-    backendType: gsm
+  - name: my-kubernetes-secret-name
+    backendType: gcpSecretsManager
     mappings:
-      - name: oauth
-        key: secret/data/jx/pipelineUser
-        property: token
-
+    - name: oauth
+      key: my-gsm-secret-name
+      property: value
+    gcpSecretsManager:
+      projectId: foo
+      version: 1
   defaultBackendType: vault
