--- a/pkg/cmd/extsecret/test_data/backend_types/oauth2/source.yaml
+++ b/pkg/cmd/extsecret/test_data/backend_types/oauth2/source.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: lighthouse-oauth-token2
+  name: my-kubernetes-secret-name
   labels:
     app: lighthouse-lighthouse
     chart: "lighthouse-0.0.633"
