--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -30,6 +30,8 @@ pipelineConfig:
             env:
             - name: NO_GOOGLE_APPLICATION_CREDENTIALS
               value: "true"
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: ""
           - name: changelog
             command: jx step changelog --verbose --header-file=hack/changelog-header.md --version=$VERSION --rev=$PULL_BASE_SHA --output-markdown=changelog.md --update-release=false
           - name: upload-binaries
