fix: some gremlins on the apps resolve
due to some bugs around version stream dir handling

also moved to the nicer named file `jx-values.yaml` which is the file we can pass into helm charts

--- a/pkg/cmd/apps/resolve/test_data/expected-jx-apps.yml
+++ b/pkg/cmd/apps/resolve/test_data/expected-jx-apps.yml
@@ -29,4 +29,4 @@ repositories:
 - name: external-secrets
   url: https://godaddy.github.io/kubernetes-external-secrets
 values:
-- jx-requirements.values.yaml  
+- jx-values.yaml
