refactor: add a secrets mapping defaults struct and move backend into it

--- a/pkg/cmd/extsecret/edit/test_data/gsm_defaults_dont_replace/.jx/gitops/secret-mappings.yaml
+++ b/pkg/cmd/extsecret/edit/test_data/gsm_defaults_dont_replace/.jx/gitops/secret-mappings.yaml
@@ -3,7 +3,8 @@ kind: SecretMapping
 metadata:
   creationTimestamp: null
 spec:
-  defaultBackendType: gcpSecretsManager
+  defaults:
+    backendType: gcpSecretsManager
   secrets:
     - backendType: gcpSecretsManager
       gcpSecretsManager:
