--- a/pkg/cmd/extsecret/test_data/backend_types/.jx/gitops/secret-mappings.yaml
+++ b/pkg/cmd/extsecret/test_data/backend_types/.jx/gitops/secret-mappings.yaml
@@ -13,9 +13,10 @@ spec:
     mappings:
     - name: oauth
       key: my-gsm-secret-name
-      property: value
+      property: gsm-secret-property
     gcpSecretsManager:
       projectId: foo
       version: 1
       uniquePrefix: bar
-  defaultBackendType: vault
+  defaults:
+    backendType: vault
