--- a/pkg/secretmapping/test_data/.jx/gitops/secret-mappings.yaml
+++ b/pkg/secretmapping/test_data/.jx/gitops/secret-mappings.yaml
@@ -1,7 +1,8 @@
 apiVersion: gitops.jenkins-x.io/v1alpha1
 kind: SecretMapping
 spec:
-  defaultBackendType: vault
+  defaults:
+    backendType: vault
   secrets:
   - name: lighthouse-hmac-token
     mappings:
