--- a/pkg/cmd/extsecret/edit/test_data/gsm_defaults_add/.jx/gitops/secret-mappings.yaml
+++ b/pkg/cmd/extsecret/edit/test_data/gsm_defaults_add/.jx/gitops/secret-mappings.yaml
@@ -14,4 +14,5 @@ spec:
         - name: oauth
           key: my-gsm-secret-name
           property: value
-  defaultBackendType: gcpSecretsManager
+  defaults:
+    backendType: gcpSecretsManager
