--- a/pkg/cmd/extsecret/test_data/simple/.jx/gitops/secret-mappings.yaml
+++ b/pkg/cmd/extsecret/test_data/simple/.jx/gitops/secret-mappings.yaml
@@ -8,5 +8,6 @@ spec:
     - name: oauth
       key: secret/data/jx/pipelineUser
       property: token
-  defaultBackendType: vault
+  defaults:
+    backendType: vault
 
