fix: add mandatory secret anontation

--- a/pkg/cmd/secrets/test_data/simple/.jx/gitops/secret-mappings.yaml
+++ b/pkg/cmd/secrets/test_data/simple/.jx/gitops/secret-mappings.yaml
@@ -4,6 +4,7 @@ spec:
   secrets:
   - name: lighthouse-oauth-token
     backendType: vault
+    mandatory: true
     mappings:
     - name: oauth
       key: secret/data/jx/pipelineUser
