--- a/pkg/cmd/secrets/test_data/simple/oauth/expected.yaml
+++ b/pkg/cmd/secrets/test_data/simple/oauth/expected.yaml
@@ -3,6 +3,8 @@ apiVersion: kubernetes-client.io/v1
 kind: ExternalSecret
 metadata:
   name: lighthouse-oauth-token
+  annotations:
+    gitops.jenkins-x.io/kind: 'mandatory'
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
