--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,5 +1,5 @@
 buildPack: go-cli
-dockerRegistryOwner: jenkinsxio-labs-private
+dockerRegistryOwner: jenkinsxio
 pipelineConfig:
   pipelines:
     overrides:
@@ -33,24 +33,12 @@ pipelineConfig:
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: ""
             - name: DOCKER_REGISTRY_ORG
-              value: jenkinsxio-labs-private
+              value: jenkinsxio
           - name: changelog
             command: jx step changelog --verbose --header-file=hack/changelog-header.md --version=$VERSION --rev=$PULL_BASE_SHA --output-markdown=changelog.md --update-release=false
           - name: upload-binaries
             command: make goreleaser
-            image: gcr.io/jenkinsxio-labs-private/step-go-releaser:0.0.5
-          - name: copy-to-bucket
-            command: gsutil cp dist/*.gz dist/*.zip gs://cloudbees-jx-plugins/plugin/gitops/${VERSION}
-            image: gcr.io/jenkinsxio-labs-private/jxl
+            image: gcr.io/jenkinsxio-labs/go-releaser:0.0.18
           - command: ./promote.sh
             dir: /workspace/source
             name: promote-release
-#              - name: upload-plugin
-#                command: ./hack/upload_plugin.sh
-#                image: gcr.io/jenkinsxio-labs-private/github-release:0.0.6
-#                env:
-#                - name: GITHUB_TOKEN
-#                  valueFrom:
-#                    secretKeyRef:
-#                      name: jx-pipeline-git-github-github
-#                      key: password
