--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -38,7 +38,8 @@ pipelineConfig:
             command: jx step changelog --verbose --header-file=hack/changelog-header.md --version=$VERSION --rev=$PULL_BASE_SHA --output-markdown=changelog.md --update-release=false
           - name: upload-binaries
             command: make goreleaser
-            image: gcr.io/jenkinsxio-labs/go-releaser:0.0.18
+            #image: gcr.io/jenkinsxio-labs/go-releaser:0.0.18
+            image: gcr.io/jenkinsxio-labs-private/step-go-releaser:0.0.5
           - command: ./promote.sh
             dir: /workspace/source
             name: promote-release
