fix: add bigger timeout
as the arm binaries slow things down a fair bit

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,8 +34,8 @@ builds:
     # Defaults are 386 and amd64.
     goarch:
       - amd64
-#      - arm
-#      - arm64
+      - arm
+      - arm64
 archives:
   - name_template: "jx-gitops-{{ .Os }}-{{ .Arch }}"
     format_overrides:
