--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -38,7 +38,7 @@ pipelineConfig:
             command: jx step changelog --verbose --header-file=hack/changelog-header.md --version=$VERSION --rev=$PULL_BASE_SHA --output-markdown=changelog.md --update-release=false
           - name: upload-binaries
             command: make goreleaser
-            image: gcr.io/jenkinsxio/step-go-releaser:0.0.8
+            image: gcr.io/jenkinsxio/step-go-releaser
           - command: ./promote.sh
             dir: /workspace/source
             name: promote-release
