--- a/pkg/cmd/repository/export/test_data/expected.yaml
+++ b/pkg/cmd/repository/export/test_data/expected.yaml
@@ -1,5 +1,7 @@
 apiVersion: gitops.jenkins-x.io/v1alpha1
 kind: SourceConfig
+metadata:
+  creationTimestamp: null
 spec:
   groups:
   - owner: jenkins-x
@@ -7,6 +9,6 @@ spec:
     providerKind: github
     providerName: github
     repositories:
-      - name: jx-cli
-      - name: jx-gitops
-  scheduler: cheese
+    - name: jx-cli
+    - name: jx-gitops
+    scheduler: cheese
