--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -14,6 +14,16 @@ pipelineConfig:
       step:
         sh: make test
         image: golang:1.13
+    - name: container-build
+      step:
+        sh: /kaniko/executor $KANIKO_FLAGS --cache=true --cache-dir=/workspace --context=/workspace/source --dockerfile=/workspace/source/Dockerfile-preview --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/jx-gitops:$VERSION --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/cache
+        image: gcr.io/kaniko-project/executor
+        env:
+        - name: NO_GOOGLE_APPLICATION_CREDENTIALS
+          value: "true"
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: ""
+
     release:
       pipeline:
         stages:
