--- a/pkg/cmd/requirement/merge/test_data/expected.yml
+++ b/pkg/cmd/requirement/merge/test_data/expected.yml
@@ -59,7 +59,8 @@ ingress:
     production: true
 kaniko: true
 repository: nexus
-secretStorage: vault
+secretStorage:
+  provider: vault
 storage:
   backup:
     enabled: false
