--- a/pkg/cmd/requirement/merge/test_data/jx-requirements.yml
+++ b/pkg/cmd/requirement/merge/test_data/jx-requirements.yml
@@ -41,7 +41,8 @@ ingress:
     production: false
 kaniko: true
 repository: nexus
-secretStorage: vault
+secretStorage:
+  provider: vault
 storage:
   backup:
     enabled: false
