fix: enable in-repo-config generation for lighthouse

--- a/pkg/cmd/scheduler/test_data/config-root/namespaces/jx/jxboot-helmfile-resources/default-scheduler.yaml
+++ b/pkg/cmd/scheduler/test_data/config-root/namespaces/jx/jxboot-helmfile-resources/default-scheduler.yaml
@@ -25,6 +25,9 @@ spec:
     prStatusBaseUrl: ""
     squashLabel: ""
     targetUrl: http://deck.cluster.local
+  in_repo_config:
+    enabled:
+      "*": true
   plugins:
     entries:
     - approve
