fix: more test cases for the scheduler
so we can reuse LH config for presubmits/postsubmits but preserve the LH config merge/generation logic

also aligned more names with the latest LH names to avoid confusion in the Scheduler config files

--- a/pkg/cmd/helmfile/move/test_data/output/helmfile-b22978a4-jxboot-helmfile-resources/jxboot-helmfile-resources/templates/default-scheduler.yaml
+++ b/pkg/cmd/helmfile/move/test_data/output/helmfile-b22978a4-jxboot-helmfile-resources/jxboot-helmfile-resources/templates/default-scheduler.yaml
@@ -16,9 +16,9 @@ spec:
     mergeMethod: merge
     policy:
       fromBranchProtection: true
-      optionalContexts: {}
-      requiredContexts: {}
-      requiredIfPresentContexts: {}
+      optional-contexts: {}
+      required-contexts: {}
+      required-if-present-contexts: {}
       skipUnknownContexts: false
     prStatusBaseUrl: ""
     squashLabel: ""
