--- a/pkg/cmd/scheduler/test_data/versionStream/schedulers/jx-meta-pipeline.yaml
+++ b/pkg/cmd/scheduler/test_data/versionStream/schedulers/jx-meta-pipeline.yaml
@@ -13,9 +13,9 @@ spec:
     merge_method: merge
     policy:
       fromBranchProtection: true
-      optionalContexts: { }
-      requiredContexts: { }
-      requiredIfPresentContexts: { }
+      optional-contexts: { }
+      required-contexts: { }
+      required-if-present-contexts: { }
       skipUnknownContexts: false
     prStatusBaseUrl: ""
     squashLabel: ""
