--- a/pkg/pipelinescheduler/test_data/merger_with_parent/repo.yaml
+++ b/pkg/pipelinescheduler/test_data/merger_with_parent/repo.yaml
@@ -5,11 +5,11 @@ merger:
   squashLabel: squash
   policy:
     skipUnknownContexts: false
-    requiredContexts:
+    required-contexts:
       replace: false
       entries:
         - context3
-    requiredIfPresentContexts:
+    required-if-present-contexts:
       replace: true
       entries:
         - context5
