--- a/pkg/pipelinescheduler/test_data/policy_with_parent/parent.yaml
+++ b/pkg/pipelinescheduler/test_data/policy_with_parent/parent.yaml
@@ -57,9 +57,9 @@ presubmits:
   entries:
   - name: integration
     agent: tekton
-    alwaysRun: true
+    always_run: true
     context: integration
-    rerunCommand: /test this
+    rerun_command: /test this
     trigger: (?m)^/test( all| this),?(\s+|$)
     queries:
       - labels:
