--- a/pkg/cmd/helmfile/move/test_data/output/helmfile-b22978a4-jxboot-helmfile-resources/jxboot-helmfile-resources/templates/env-scheduler.yaml
+++ b/pkg/cmd/helmfile/move/test_data/output/helmfile-b22978a4-jxboot-helmfile-resources/jxboot-helmfile-resources/templates/env-scheduler.yaml
@@ -16,9 +16,9 @@ spec:
     mergeMethod: merge
     policy:
       fromBranchProtection: true
-      optionalContexts: {}
-      requiredContexts: {}
-      requiredIfPresentContexts: {}
+      optional-contexts: {}
+      required-contexts: {}
+      required-if-present-contexts: {}
       skipUnknownContexts: false
     prStatusBaseUrl: ""
     squashLabel: ""
