--- a/pkg/cmd/scheduler/test_data/versionStream/schedulers/default.yaml
+++ b/pkg/cmd/scheduler/test_data/versionStream/schedulers/default.yaml
@@ -14,9 +14,9 @@ spec:
     merge_method: merge
     policy:
       fromBranchProtection: true
-      optionalContexts: { }
-      requiredContexts: { }
-      requiredIfPresentContexts: { }
+      optional-contexts: { }
+      required-contexts: { }
+      required-if-present-contexts: { }
       skipUnknownContexts: false
     prStatusBaseUrl: ""
     squashLabel: ""
@@ -73,6 +73,7 @@ spec:
           - excluded_branches: {}
             included_branches: {}
             labels:
+              entries:
               - approved
             milestone: ""
             missing_labels:
@@ -85,6 +86,7 @@ spec:
           - excluded_branches: {}
             included_branches: {}
             labels:
+              entries:
               - updatebot
             milestone: ""
             missing_labels:
