--- a/pkg/cmd/scheduler/test_data/versionStream/schedulers/in-repo.yaml
+++ b/pkg/cmd/scheduler/test_data/versionStream/schedulers/in-repo.yaml
@@ -14,9 +14,9 @@ spec:
     merge_method: merge
     policy:
       fromBranchProtection: true
-      optionalContexts: { }
-      requiredContexts: { }
-      requiredIfPresentContexts: { }
+      optional-contexts: { }
+      required-contexts: { }
+      required-if-present-contexts: { }
       skipUnknownContexts: false
     prStatusBaseUrl: ""
     squashLabel: ""
